# pyorica

./: .gitignore  CITATION.cff  CONTEXT.md  README.md  config.yaml  pyproject.toml
benchmarks/: README.md  aggregate_results.py  run_all_subjects.py  run_validation.py
docs/: config_original.yaml  original-vs-pyorica-discrepancies.md  pipeline-architecture.md  pyorica_sample_spec.md
docs/adr/: 0001-channels-first-data-convention.md  0002-pylsl-over-mne-lsl.md  0003-pipeline-order-iir-asr-orica.md  0004-scipy-stateful-iir-filter.md
docs/diagrams/: pipeline-evaluation-mermaid.html  pipeline-evaluation.html  pipeline-realtime-mermaid.html  pipeline-realtime.html
pyorica/: __init__.py  config.py
pyorica/eval/: __init__.py  analysis.py  ica_analysis.py  loader.py  runner.py
pyorica/filters/: __init__.py  iir.py
pyorica/orica/: __init__.py  core.py
pyorica/pipeline/: __init__.py  asr.py  classify.py  pipeline.py
pyorica/streaming/: __init__.py  array.py  lsl.py
tests/: test_aggregate.py  test_analysis.py  test_array_stream.py  test_asr_adapter.py  test_classify.py  test_config.py  test_ica_analysis.py  test_iir.py  test_loader.py  test_lsl_stream.py  test_orica.py  test_pipeline.py  test_runner.py
tests/data/: README.md
